<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.paymentSuccess.PaymentSuccessActivity">


    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryVariant"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:padding="@dimen/padding_default"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_default"
            android:text="@string/txt_success"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xx_large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_blue"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_xx_large">

        <ImageView
            android:id="@+id/ivSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xxx_large"
            android:src="@drawable/ic_check" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xxx_large"
            android:textStyle="bold"
            tools:text="3000.00" />

        <TextView
            android:id="@+id/tvPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_xx_large"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_xxx_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white_grey"
            android:textSize="@dimen/text_x_large" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_default">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_status"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/txt_success"
            android:textColor="@color/green"
            android:textSize="@dimen/text_normal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_default">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/txt_success"
            android:textSize="@dimen/text_normal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_weight="0.5"
            android:text="@string/print"
            android:textAllCaps="false"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:layout_weight="0.5"
            android:text="@string/e_receipt"
            android:textAllCaps="false"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>